--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,12 +1,5 @@
-fastapi==0.109.2
-uvicorn==0.27.1
-uvloop==0.19.0
-httptools==0.6.1
-torch==2.2.0
-transformers>=4.38.0
-pydantic==2.6.1
-accelerate==0.27.2
-sentencepiece==0.2.0
-python-dotenv==1.0.1
-einops==0.7.0
-numpy<2.0.0  # Downgrade numpy to fix compatibility issues 
+fastapi>=0.68.0
+uvicorn>=0.15.0
+httpx>=0.24.0
+vllm>=0.2.0
+pydantic>=1.8.0 
